<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_weight="1">

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:padding="10dip">

			<Button android:text="@string/new_button" android:id="@+id/newgame"
				android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>

			<Button android:text="@string/resume_button" android:id="@+id/resume"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:enabled="false"></Button>

			<Button android:text="@string/stats" android:id="@+id/stats"
				android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>

			<Button android:text="@string/rules_button" android:id="@+id/rules_button"
				android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>

			<Button android:text="@string/about_button" android:id="@+id/about"
				android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>

		</LinearLayout>

	</ScrollView>

</LinearLayout>
