<?xml version="1.0" encoding="utf-8"?>

<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@android:id/tabhost" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent">

		<TabWidget android:id="@android:id/tabs"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />

		<ScrollView android:layout_width="fill_parent"
			android:layout_height="fill_parent">

			<FrameLayout android:id="@android:id/tabcontent"
				android:layout_width="fill_parent" android:layout_height="fill_parent">

				<LinearLayout android:id="@+id/ref_content1"
					android:padding="10dip" android:orientation="vertical"
					android:layout_width="fill_parent" android:layout_height="fill_parent">

					<TextView android:text="@string/reference_road" android:textSize="24dip"
						android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>

					<LinearLayout android:orientation="horizontal" android:paddingBottom="24dip"
						android:layout_width="wrap_content" android:layout_height="wrap_content">
						
						<ImageView android:src="@drawable/res_lumber_large"
							android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
							
						<ImageView android:src="@drawable/res_brick_large"
							android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
							
					</LinearLayout>

					<TextView android:text="@string/reference_town" android:textSize="24dip"
						android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>

					<LinearLayout android:orientation="horizontal" android:paddingBottom="24dip"
						android:layout_width="wrap_content" android:layout_height="wrap_content">
						
						<ImageView android:src="@drawable/res_lumber_large"
							android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
							
						<ImageView android:src="@drawable/res_wool_large"
							android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
							
						<ImageView android:src="@drawable/res_grain_large"
							android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
							
						<ImageView android:src="@drawable/res_brick_large"
							android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
							
					</LinearLayout>

					<TextView android:text="@string/reference_city" android:textSize="24dip"
						android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>

					<LinearLayout android:orientation="horizontal" android:paddingBottom="24dip"
						android:layout_width="wrap_content" android:layout_height="wrap_content">
						
						<ImageView android:src="@drawable/res_grain_large"
							android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
							
						<ImageView android:src="@drawable/res_grain_large"
							android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
							
						<ImageView android:src="@drawable/res_ore_large"
							android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
							
						<ImageView android:src="@drawable/res_ore_large"
							android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
							
						<ImageView android:src="@drawable/res_ore_large"
							android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
							
					</LinearLayout>

					<TextView android:text="@string/reference_card" android:textSize="24dip"
						android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>

					<LinearLayout android:orientation="horizontal" android:paddingBottom="24dip"
						android:layout_width="wrap_content" android:layout_height="wrap_content">
						
						<ImageView android:src="@drawable/res_wool_large"
							android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
							
						<ImageView android:src="@drawable/res_grain_large"
							android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
							
						<ImageView android:src="@drawable/res_ore_large"
							android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
							
					</LinearLayout>

				</LinearLayout>

				<LinearLayout android:id="@+id/ref_content2"
					android:padding="10dip" android:orientation="vertical"
					android:layout_width="fill_parent" android:layout_height="fill_parent">

					<TextView android:id="@+id/ref_text2" android:text="@string/reference_build"
						android:textSize="16dip" android:layout_width="fill_parent"
						android:layout_height="fill_parent" />

				</LinearLayout>

				<LinearLayout android:id="@+id/ref_content3"
					android:padding="10dip" android:orientation="vertical"
					android:layout_width="fill_parent" android:layout_height="fill_parent">

					<TextView android:id="@+id/ref_text3" android:text="@string/reference_cards"
						android:textSize="16dip" android:layout_width="fill_parent"
						android:layout_height="fill_parent" />

				</LinearLayout>

			</FrameLayout>

		</ScrollView>

	</LinearLayout>

</TabHost>
